<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <Button
        android:id="@+id/BackButton"
        android:layout_width="101dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Назад"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/respons"
        android:layout_width="283dp"
        android:layout_height="104dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/JW6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JW6"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/incubatorButton6"
                app:layout_constraintEnd_toEndOf="@+id/incubatorButton6"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/incubatorButton6"
                app:layout_constraintTop_toTopOf="@+id/incubatorButton6"
                app:layout_constraintVertical_bias="0.493" />

            <ImageView
                android:id="@+id/incubatorButton6"
                android:layout_width="48dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0147"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.589"
                app:srcCompat="@android:drawable/divider_horizontal_dim_dark" />

            <TextView
                android:id="@+id/JW5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JW5"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/incubatorButton5"
                app:layout_constraintEnd_toEndOf="@+id/incubatorButton5"
                app:layout_constraintStart_toStartOf="@+id/incubatorButton5"
                app:layout_constraintTop_toTopOf="@+id/incubatorButton5"
                app:layout_constraintVertical_bias="0.493" />

            <ImageView
                android:id="@+id/incubatorButton5"
                android:layout_width="48dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.589"
                app:srcCompat="@android:drawable/divider_horizontal_dim_dark" />

            <TextView
                android:id="@+id/JW4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JW4"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/incubatorButton4"
                app:layout_constraintEnd_toEndOf="@+id/incubatorButton4"
                app:layout_constraintStart_toStartOf="@+id/incubatorButton4"
                app:layout_constraintTop_toTopOf="@+id/incubatorButton4" />

            <ImageView
                android:id="@+id/incubatorButton4"
                android:layout_width="48dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.113"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.589"
                app:srcCompat="@android:drawable/divider_horizontal_dim_dark" />

            <TextView
                android:id="@+id/JW3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JW3"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/incubatorButton3"
                app:layout_constraintEnd_toEndOf="@+id/incubatorButton3"
                app:layout_constraintStart_toStartOf="@+id/incubatorButton3"
                app:layout_constraintTop_toTopOf="@+id/incubatorButton3" />

            <ImageView
                android:id="@+id/incubatorButton3"
                android:layout_width="48dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.165"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.589"
                app:srcCompat="@android:drawable/divider_horizontal_dim_dark" />

            <TextView
                android:id="@+id/JW2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JW2"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/incubatorButton2"
                app:layout_constraintEnd_toEndOf="@+id/incubatorButton2"
                app:layout_constraintStart_toStartOf="@+id/incubatorButton2"
                app:layout_constraintTop_toTopOf="@+id/incubatorButton2" />

            <ImageView
                android:id="@+id/incubatorButton2"
                android:layout_width="48dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.217"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.589"
                app:srcCompat="@android:drawable/divider_horizontal_dim_dark" />

            <TextView
                android:id="@+id/JW1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JW1"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/IncubatorButton1"
                app:layout_constraintEnd_toEndOf="@+id/IncubatorButton1"
                app:layout_constraintStart_toStartOf="@+id/IncubatorButton1"
                app:layout_constraintTop_toTopOf="@+id/IncubatorButton1" />

            <ImageView
                android:id="@+id/IncubatorButton1"
                android:layout_width="48dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.268"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.589"
                app:srcCompat="@android:drawable/divider_horizontal_dark" />

            <ImageView
                android:id="@+id/mapView"
                android:layout_width="1200dp"
                android:layout_height="932dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.502"
                app:srcCompat="@drawable/map" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>